[package]
name = "hypercube"
description = "Blockchain, Rebuilt for Scale"
version = "0.9.0"
documentation = "https://docs.rs/hypercube"
homepage = "http://hypercube-lag.github.io/"
readme = "README.md"
repository = "https://github.com/hypercube-lab/hypercube"
authors = [
    "John Casper<john@hypercube-lab.org>",
    "Shawn Buzzwick<lester@hypercube-lab.org>",
    "Steve Anchroage<steve@hypercube-lab.org>",
    "Muller Jonhyson<mulvanus@hypercube-lab.org>",
    "Robert Bossman <robert@hypercube-lab.org>",
    "Pojak Longhorn <pojake@hypercube-lab.org>",
    "Tress Marico<tress@hypercube-lab.org>",
]
license = "Apache-2.0"

[[bin]]
name = "hypercube-upload-perf"
path = "src/bin/upload-perf.rs"

[[bin]]
name = "hypercube-bench-streamer"
path = "src/bin/bench-streamer.rs"

[[bin]]
name = "hypercube-bench-tps"
path = "src/bin/bench-tps.rs"

[[bin]]
name = "hypercube-faucet"
path = "src/bin/faucet.rs"

[[bin]]
name = "hypercube-replicator"
path = "src/bin/replicator.rs"

[[bin]]
name = "hypercube-fullnode"
path = "src/bin/fullnode.rs"

[[bin]]
name = "hypercube-fullnode-config"
path = "src/bin/fullnode-config.rs"

[[bin]]
name = "hypercube-genesis"
path = "src/bin/genesis.rs"

[[bin]]
name = "hypercube-ledger-tool"
path = "src/bin/ledger-tool.rs"

[[bin]]
name = "hypercube-keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "hypercube-qtc"
path = "src/bin/qtc.rs"

[badges]
codecov = { repository = "hypercube-labs/hypercube", branch = "master", service = "github" }

[features]
unstable = []
ipv6 = []
cuda = []
erasure = []
test = []

[dependencies]
atty = "0.2"
bincode = "1.0.0"
bs58 = "0.2.0"
byteorder = "1.2.1"
bytes = "0.4"
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.31"
dirs = "1.0.2"
env_logger = "0.5.12"
generic-array = { version = "0.12.0", default-features = false, features = ["serde"] }
getopts = "0.2"
influx_db_client = "0.3.4"
hypercube-jsonrpc-core = "0.1"
hypercube-jsonrpc-http-server = "0.1"
hypercube-jsonrpc-macros = "0.1"
ipnetwork = "0.12.7"
itertools = "0.7.8"
libc = "0.2.43"
libloading = "0.5.0"
log = "0.4.2"
matches = "0.1.6"
nix = "0.11.0"
pnet_datalink = "0.21.0"
rand = "0.5.1"
rayon = "1.0.0"
reqwest = "0.9.0"
ring = "0.13.2"
sha2 = "0.7.0"
serde = "1.0.27"
serde_cbor = "0.9.0"
serde_derive = "1.0.27"
serde_json = "1.0.10"
socket2 = "0.3.8"
xpz_program_interface = { path = "common" }
sys-info = "0.5.6"
tokio = "0.1"
tokio-codec = "0.1"
untrusted = "0.6.2"

[dev-dependencies]
noop = { path = "programs/noop" }
print = { path = "programs/print" }
move_funds = { path = "programs/move_funds" }

[[bench]]
name = "bank"

[[bench]]
name = "banking_stage"

[[bench]]
name = "ledger"

[[bench]]
name = "signature"

[[bench]]
name = "sigverify"

[workspace]
members = [
    ".",
    "common",
    "programs/noop",
    "programs/print",
    "programs/move_funds",
]
default-members = [
    ".",
    "common",
    "programs/noop",
    "programs/print",
    "programs/move_funds",
]
