[package]
name = "token_transfer"
version = "0.1.0"
authors = [
    "John Casper<john@hypercube-lab.org>",
    "Shawn Buzzwick<lester@hypercube-lab.org>",
    "Steve Anchroage<steve@hypercube-lab.org>",
    "Muller Jonhyson<mulvanus@hypercube-lab.org>",
    "Robert Bossman <robert@hypercube-lab.org>",
    "Pojak Longhorn <pojake@hypercube-lab.org>",
    "Tress Marico<tress@hypercube-lab.org>",
    "Jack May <jack@hypercube-lab.org>",
]

[dependencies]
bincode = "1.0.0"
generic-array = { version = "0.12.0", default-features = false, features = ["serde"] }
xpz_program_interface = { path = "../../common" }

[lib]
name = "token_transfer"
crate-type = ["dylib"]

